<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorOnBackground"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_content" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <FrameLayout
                        android:id="@+id/layout_image_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:layout_constraintDimensionRatio="1:1">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image"
                            android:layout_width="200sp"
                            android:layout_height="200sp"
                            android:scaleType="centerCrop"
                            android:src="@color/image_profile"
                            app:civ_border_color="?tickColor"
                            app:civ_border_overlay="true"
                            app:civ_border_width="5sp"
                            app:civ_circle_background_color="@color/white" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/edit_image_icon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="10sp"
                            android:layout_marginBottom="10sp"
                            android:background="@drawable/button_number"
                            android:backgroundTint="?tickColor"
                            android:padding="5dp"
                            android:src="@drawable/ic_adds"
                            app:layout_constraintDimensionRatio="1:1"
                            app:tint="@color/white" />

                    </FrameLayout>

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button"
                        android:hint="@string/name_product"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="10sp"
                        android:textColor="?colorError"
                        android:textColorHint="?colorError"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/indications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/button"
                        android:hint="@string/Indications"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:maxLength="1000"
                        android:padding="10sp"
                        android:textColor="?colorError"
                        android:textColorHint="?colorError"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/how_to_use"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/button"
                        android:hint="@string/How_to_use"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:maxLength="1000"
                        android:padding="10sp"
                        android:textColor="?colorError"
                        android:textColorHint="?colorError"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/button"
                        android:hint="@string/price_product"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:padding="10sp"
                        android:textColor="?colorError"
                        android:textColorHint="?colorError"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/product_category"
                    android:textColor="@color/dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/typeOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/button"
                        android:maxLines="1"
                        android:padding="10sp"
                        android:text="@string/product_skin"
                        android:textColor="?colorError"
                        android:textColorHint="?colorError"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/typeTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:maxLines="1"
                        android:padding="10sp"
                        android:text="@string/product_hair"
                        android:textColor="?colorError"
                        android:textColorHint="?colorError"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30sp"
                    android:background="@drawable/b"
                    android:backgroundTint="?tickColor"
                    android:gravity="center"
                    android:padding="15dp"
                    android:rotation="180"
                    android:src="@drawable/ic_back_white"
                    android:text="@string/publish" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>